Updated api server and spec
